--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.1",
     "@vercel/analytics": "^1.6.1",
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
