--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/third-parties": "^16.1.1",
     "@vercel/analytics": "^1.6.1",
     "firebase": "^12.7.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.0",
